--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
   </head>
   <body>
     <header>头部</head>
-    <main>主要内容</main>
+    <main>主要内容
+      <section>
+        <div>内容区1</div>
+      </section>
+      <section>
+        <div>内容区2</div>
+      </section>
+    </main>
     <footer>脚部</footer>
   </body>
 </html>
