--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
   <head>
     <title>主页</title>
+    <link rel="stylesheet" type="text/css" href="./index.css"/>
   </head>
   <body>
+    <h1>hello world</h1>
     <header>头部</head>
     <main>主要内容
       <section>
