--- a/index.html
+++ b/index.html
@@ -92,19 +92,19 @@
 				<h3>comes in black<br />
 				&nbsp;
 				</h3>
-				<img src="../images/iphoneSE_black.png" >
+				<img src="../image/iphoneSE_black.png" >
 			</div>
 			<div class="iphone white">
 				<h3>comes in black<br>
 					<span>white</span>
 				</h3>
-				<img src="../images/iphoneSE_white.png" >
+				<img src="../image/iphoneSE_white.png" >
 			</div>
 			<div class="iphone red">
 				<h3>comes in black<br>
 				white <span>And power</span>
 				</h3>
-				<img src="../images/iphoneSE_red.png" >
+				<img src="../image/iphoneSE_red.png" >
 			</div>
 		</div>
 		
