--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 				$white.style.clipPath = `inset(${((0.5 - scrolled) / 0.5) * 100}% 0 0 0)`;
 				$red.style.clipPath = `inset(${((1 - scrolled) / 0.5) * 100}% 0 0 0)`;
 				
-				console.log(scrolled);
+				// console.log(scrolled);
 				
 				if(scrolled >= 1){
 					document.querySelector(".sticky-container").classList.add("no-sticky");
